Added activity for testing buttons in AndroidView

--- a/app/src/main/res/layout/activity_xml_buttons.xml
+++ b/app/src/main/res/layout/activity_xml_buttons.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:gravity="center"
-            android:text="Окно с XML-версткой"
+            android:text="Кнопки с XML-версткой"
             android:textSize="20sp"
             android:textStyle="bold" />
 
